[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://sprites/health_bar.png" type="Texture" id=2]
[ext_resource path="res://sprites/mana_bar.png" type="Texture" id=3]
[ext_resource path="res://fonts/KenVector Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/HUD_sprites/super_attack.png" type="Texture" id=5]
[ext_resource path="res://scenes/move_analog.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/shoot_joystick.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/shoot_joystick.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.698039, 0.168627, 0.168627, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[node name="hud" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="player_health" type="TextureProgress" parent="CanvasLayer/Control"]
margin_left = 29.6375
margin_top = 33.679
margin_right = 477.637
margin_bottom = 149.679
rect_scale = Vector2( 0.5, 0.25 )
texture_progress = ExtResource( 2 )

[node name="health_tween" type="Tween" parent="CanvasLayer/Control/player_health"]

[node name="player_mana" type="TextureProgress" parent="CanvasLayer/Control"]
margin_left = 800.0
margin_right = 1248.0
margin_bottom = 116.0
rect_scale = Vector2( 0.5, 0.25 )
texture_progress = ExtResource( 3 )

[node name="gems_text" type="Label" parent="CanvasLayer/Control"]
margin_left = 352.0
margin_top = 21.0
margin_right = 719.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "GEMS COLLECTED
"
align = 1

[node name="gems_collected" type="Label" parent="CanvasLayer/Control"]
margin_left = 500.0
margin_top = 70.0
margin_right = 602.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1

[node name="super_attack" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 648.559
margin_top = 418.958
margin_right = 972.56
margin_bottom = 742.958
rect_scale = Vector2( 0.35, 0.35 )
disabled = true
toggle_mode = true
texture_normal = ExtResource( 5 )

[node name="Joystick" parent="CanvasLayer/Control" instance=ExtResource( 6 )]
margin_left = 70.0
margin_right = 210.0
use_screen_rectangle = true
screen_rectangle = Rect2( 0, 0, 500, 600 )
editor_color = Color( 0.964706, 0.0470588, 0.0470588, 1 )

[node name="Joystick2" parent="CanvasLayer/Control" instance=ExtResource( 7 )]
script = ExtResource( 8 )
use_screen_rectangle = false
screen_rectangle = Rect2( 0, 0, 0, 0 )
editor_color = Color( 1, 0, 0, 1 )

[connection signal="toggled" from="CanvasLayer/Control/super_attack" to="." method="activate_skill_button"]
